<resources>
    <string name="app_name">UberAppJavaKotlin</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign up</string>
    <string name="don_t_have_an_account"><u>don\'t have an account</u></string>
    <string name="i_have_an_account"><u>I have an account</u></string>
    <string name="for_get_password"><u>For get password</u></string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="api_key_map">AIzaSyALBMrzXjuXEg9RZEGl4fwTMCvMcw8bGhE</string>
    <string name="ellipsis">&#8230;</string>
    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate">Animate scale to random value</string>
    <string name="menu_zoom_random">Set scale to random value</string>
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
</resources>